--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:dev": "webpack --mode development",
-    "build:prod": "webpack --mode production"
+    "build:prod": "webpack --mode production",
+    "build:dev:watch": "webpack --mode development --watch",
+    "build:prod:watch": "webpack --mode production --watch"
   },
   "keywords": [
     "react",
@@ -27,6 +29,9 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^9.1.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^6.7.2",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   }
