--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production",
     "build:dev:watch": "webpack --mode development --watch",
-    "build:prod:watch": "webpack --mode production --watch"
+    "build:prod:watch": "webpack --mode production --watch",
+    "start:server": "babel ./server.js --out-dir ./output && babel src --out-dir ./output/src && nodemon ./output/server.js"
   },
   "keywords": [
     "react",
@@ -23,6 +24,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-cli": "^6.26.0",
@@ -32,6 +35,7 @@
     "css-loader": "^6.7.2",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "nodemon": "^2.0.20",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   }
